# pacte

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pacte/: __init__.py  cli.py  clipboard.py  config.py  exceptions.py  file_operations.py  history.py  models.py  undo_tui.py  utils.py
tests/: conftest.py  test_cli.py  test_clipboard.py  test_config.py  test_exceptions.py  test_file_operations.py  test_history.py  test_init.py  test_integration.py  test_models.py  test_undo_tui.py  test_utils.py
