[project]
name = "pacte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cristality_", email = "jovarasz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pacte = "pacte:main"

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
